--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "publish": "npm run build:prod && rimraf -- prod && cpr -- dist prod"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -33,6 +34,8 @@
     "node-sass": "6.0.1",
     "sass-loader": "10.2.0",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "rimraf": "^3.0.2",
+    "cpr": "^3.0.1"
   }
 }
