--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "publish": "npm run build:prod && rimraf -- prod && cpr -- dist prod"
+    "publish": "npm run build && rimraf -- prod && cpr -- dist prod"
   },
   "dependencies": {
     "core-js": "^3.6.5",
