--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "publish": "npm run build && rimraf -- prod && cpr -- dist prod"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.24.5",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.24.5",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.1.0",
-    "vue-awesome-swiper": "^3.1.3"
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -29,13 +30,13 @@
     "@vue/cli-plugin-vuex": "~4.5.7",
     "@vue/cli-service": "~4.5.7",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "cpr": "^3.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "6.0.1",
+    "rimraf": "^3.0.2",
     "sass-loader": "10.2.0",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11",
-    "rimraf": "^3.0.2",
-    "cpr": "^3.0.1"
+    "vue-template-compiler": "^2.6.11"
   }
 }
