--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,4 @@
 // 开发环境
 # just a flag
 NODE_ENV = 'development'
-VUE_APP_BASE_API = 'https://api.coingecko.com'
-VUE_APP_GAME_API = 'https://hw-api-test.hashland.com'
-VUE_APP_NEWCARD = 'https://cdn.hashland.com/test-newCard/'
+VUE_APP_BASE_API = 'http://124.221.101.198:6645'
