--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sacredrealm",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
+    "build:dev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "publish": "npm run build && rimraf -- prod && cpr -- dist prod"
   },
