--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "bignumber.js": "^9.0.1",
+    "sacredrealm-sdk": "^1.0.6",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
