--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "core-js": "^3.6.5",
     "bignumber.js": "^9.0.1",
+    "core-js": "^3.6.5",
     "sacredrealm-sdk": "^1.0.6",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.24.5",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
