--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sacredrealm",
-  "version": "0.1.3",
+  "name": "SealemLab",
+  "version": "0.1.4",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
