--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 // 生产环境
 # just a flag
 NODE_ENV = 'production'
-VUE_APP_BASE_API = 'http://124.221.101.198:6645'
+VUE_APP_BASE_API = 'https://api.sealemlab.com/'
