--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "bignumber.js": "^9.0.1",
     "core-js": "^3.6.5",
+    "lottie-web": "^5.9.4",
     "sealemlab-sdk": "^1.0.16",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
