--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SealemLab",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
@@ -20,6 +20,7 @@
     "sealemlab-sdk": "^1.0.16",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-circleprogressbar": "^1.4.0",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.24.5",
     "vue-infinite-scroll": "^2.0.2",
