--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-circleprogressbar": "^1.4.0",
     "vue-class-component": "^7.2.3",
+    "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.24.5",
     "vue-infinite-scroll": "^2.0.2",
     "vue-property-decorator": "^9.1.2",
