--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "^0.26.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "bignumber.js": "^9.0.1",
     "core-js": "^3.6.5",
     "lottie-web": "^5.9.4",
