--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bignumber.js": "^9.0.1",
     "core-js": "^3.6.5",
     "lottie-web": "^5.9.4",
-    "sealemlab-sdk": "^1.0.37",
+    "react": "^18.2.0",
+    "sealemlab-sdk": "1.0.29",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-circleprogressbar": "^1.4.0",
