--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "core-js": "^3.6.5",
     "lottie-web": "^5.9.4",
     "react": "^18.2.0",
-    "sealemlab-sdk": "1.0.29",
+    "sealemlab-sdk": "^1.0.38",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-circleprogressbar": "^1.4.0",
